--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@expo/metro-runtime": "~4.0.1",
     "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-navigation/native": "^7.0.15",
+    "@react-navigation/stack": "^7.1.2",
     "expo": "~52.0.27",
     "expo-status-bar": "~2.0.1",
     "formik": "^2.4.6",
@@ -20,6 +22,11 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.6",
     "react-native-draggable-flatlist": "^4.0.1",
+    "react-native-gesture-handler": "^2.24.0",
+    "react-native-reanimated": "^3.17.1",
+    "react-native-safe-area-context": "^5.3.0",
+    "react-native-screens": "^4.9.1",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
     "yup": "^1.6.1"
   },
